# natk-backend

./: .env  .env.example  .gitignore  README.md  build.gradle  docker-compose.yml  settings.gradle
.github/workflows/: ai-ghcr.yml  antivirus-ghcr.yml  api-ghcr.yml  auth-ghcr.yml  clamav-db.yml  pdf-ghcr.yml
clamav/etc/clamav/: clamd.conf  clamd.conf.sample
init-db/: init.sql
natk-ai/: Dockerfile  pyproject.toml  requirements.txt
natk-ai/src/main/app/: config.py  exceptions.py  gemini_service.py  giga_chat_service.py  main.py
natk-ai/src/main/static/prompt/: prompt_template.txt  prompt_template_ru.txt
natk-ai/src/tests/: gemini_tests.py  generate_test.py  giga_test.py
natk-antivirus/: Dockerfile  build.gradle  settings.gradle
natk-antivirus/src/main/java/com/natk/natk_antivirus/: FileStatusUpdater.java  NatkAntivirusApplication.java  RabbitConfig.java  ScanWorker.java
natk-antivirus/src/main/resources/: application.properties
natk-antivirus/src/test/java/com/natk/natk_antivirus/: NatkAntivirusApplicationTests.java
natk-api/: Dockerfile  build.gradle  settings.gradle
natk-api/src/main/resources/: application.properties
natk-auth/: Dockerfile  build.gradle  settings.gradle
natk-auth/src/main/resources/: application.properties
natk-auth/src/main/resources/db/migrationTest/: V1__init.sql
natk-common/: build.gradle  settings.gradle
natk-common/gradle/wrapper/: gradle-wrapper.properties
natk-pdf/: .gitignore  Dockerfile  build.gradle  settings.gradle
natk-pdf/src/main/resources/: application.properties
(+279 files in other folders)
