[tool.poetry]
name = "natk-ai"
version = "0.1.0"
description = ""
authors = ["Alex <alexiv.04@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Основные компоненты
fastapi = "0.116.1"
uvicorn = "0.35.0"
python-dotenv = "1.1.1"
pillow = "11.3.0"
python-multipart = "0.0.20"
requests = "2.32.4"
tqdm = "4.67.1"
websockets = "15.0.1"

# API Клиенты
openai = "1.99.3"
gigachat = "0.1.42.post1"
google-genai = "1.28.0"
google-generativeai = "0.8.5"

# КРИТИЧЕСКИ ВАЖНЫЕ ЯВНЫЕ ТРАНЗИТИВНЫЕ ЗАВИСИМОСТИ
# (Они необходимы для корректной работы FastAPI, Pydantic, и Google API)
pydantic = "2.11.7"
pydantic-core = "2.33.2"
starlette = "0.47.2"
anyio = "4.10.0"
sniffio = "1.3.1"
httpcore = "1.0.9"
httpx = "0.28.1"
protobuf = "5.29.5"
grpcio = "1.74.0"
google-api-core = "2.25.1"
googleapis-common-protos = "1.70.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"